--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,18 @@ body {
   text-shadow: 2px 2px 1px var(--yellow);
 }
 
+header {
+  padding: 25px;
+  border-bottom: groove 10px var(--dark-rust);
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+main {
+  margin-bottom: 15px;
+}
+
 img {
-  /* width: 225px; */
   width: 15vw; 
   height: 30vw;
   background-color: var(--dark-blue);
